--- a/matheus 3 ano/site-acessivel-projeto-inicial/styles.css
+++ b/matheus 3 ano/site-acessivel-projeto-inicial/styles.css
@@ -3,6 +3,9 @@
 
 :root {
     --verde: #2aff95;
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #ffd700;
 }
 
 body {
@@ -148,3 +151,25 @@ h2 {
     z-index: 1000;
     
 }
+ 
+.rotacao-botao{
+    transform: rotate(-90deg);
+    transform-origin: right center;
+}
+
+.opcoes-acessibilidade{
+    margin-top: 10px ;
+    display: flex;
+    flex-direction: column;
+}
+
+.opcoes-acessibilidade button{
+    margin-bottom: 5px ;
+}
+.apresenta-lista{
+    display: none;
+}
+.alto-contraste{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}ss
